--- a/templates/aboutme/index.html
+++ b/templates/aboutme/index.html
@@ -48,12 +48,10 @@
             {% for post in recent_post %}
             <div class="card my-3">
                 <div class="card body py-2 px-2">
-                    <p>
-                        <a href="{% url 'blog:detail' post.id %}"
-                          class="text-dark text-decoration-none">{{ post.title }}</a>
-                    </p>
-                    <span class="badge text-dark text-right">
-                        {{ post.author.username }} &nbsp &nbsp &nbsp{{ post.pub_date }}
+                    <a href="{% url 'blog:detail' post.id %}"
+                      class="text-dark text-decoration-none">{{ post.title }}</a>
+                    <span class="badge text-dark">
+                        {{ post.author.username }} &nbsp {{ post.pub_date }}
                     </span>
                 </div>
             </div>
